--- a/hw1.Rmd
+++ b/hw1.Rmd
@@ -7,8 +7,8 @@ output:
     toc: true
     number_sections: true
     theme: readable
-    highlight: zenburn
-    
+    highlight: espresso
+    fig_width: 8
 ---
 
 #Gapminder  
@@ -19,10 +19,10 @@ output:
 data2 <- read.delim(file = "gapminderDataFiveYear.txt")
 ```
 
-If we use the functions without specifying arguments other than *file*, we can't the same result. For *read.table()*, there are errors. Because when we look into the documents for *read.table()* and *read.delim()*, their arguments are different. The default argument *sep* for *read.table()* is white space, but default argument *sep* for read.delim() is "\\t", which means tab. Because for observation 145, the country's name has space in it, so if we set *sep* argument to white space, R will separate the country and that lead to the error. The second error is for argument *header*, we should set "header=T" in order to exclude the header of the data  out of the observation. The last error is argument *quote*, we should let quote be \", but not \', because some countries' name have quote \' in it.  
+* If we use the functions without specifying arguments other than *file*, we can't the same result. For *read.table()*, there are errors. Because when we look into the documents for *read.table()* and *read.delim()*, their arguments are different. The default argument *sep* for *read.table()* is white space, but default argument *sep* for read.delim() is "\\t", which means tab. Because for observation 145, the country's name has space in it, so if we set *sep* argument to white space, R will separate the country and that lead to the error. The second error is for argument *header*, we should set "header=T" in order to exclude the header of the data  out of the observation. The last error is argument *quote*, we should let quote be \", but not \', because some countries' name have quote \' in it.  
   
   
-This time we can set the argument of *read.table()*, so that it is  equivalent to *read.delim()*:  
+* This time we can set the argument of *read.table()*, so that it is  equivalent to *read.delim()*:  
 
 ```{r}
 data1 <- read.table(file = "gapminderDataFiveYear.txt", sep = "\t", header = T, quote = "\"")
@@ -41,13 +41,44 @@ data1 <- read.table(file = "gapminderDataFiveYear.txt", sep = "\t", header = T, 
   
   
 ##Explore individual variables:  
-* I choose the categorical variable country. It has 142 levels, that means there are 142 countries in this dataset. Each country have 12 years different kinds of data. So add up together 142 * 12 = 1704. I choose the quatitative variable as pop, which is population. By command "max(data1\$pop)" and "min(data1\$pop)", we can get the largest population and smallest population in 12 these years. They are 1,318,683,096 and 60,011. By using "data1[which(data1$pop==1318683096),]" and "data1[which(data1$pop==60011),]", we can get China in 2007 has the largest the population, Sao Tome and Principle has the smallest population. 
+* I choose the categorical variable country. It has 142 levels, that means there are 142 countries in this dataset. Each country have 12 years different kinds of data. So add up together 142 * 12 = 1704. I choose the quatitative variable as pop, which is population. By command "max(data1\$pop)" and "min(data1\$pop)", we can get the largest population and smallest population in 12 these years. They are 1,318,683,096 and 60,011. By using "data1[which(data1$pop==1318683096),]" and "data1[which(data1$pop==60011),]", we can get China in 2007 has the largest the population, Sao Tome and Principle in 1952 has the smallest population. 
   
 * In order to answer the characteristics of the data, we need to do something more, such as graphics and some simple data summaries:  
 
 ```{r}
 library(lattice)
-xyplot(pop~year|country,data=data1[1:60,])
+mean(data1$pop)
+var(data1$pop)
+histogram(~pop,data=data1,type="percent",breaks=100)
 ```
+
+* We can get the average population of the whole countries in 12 years is 29,601,212. The variance of the whole countries in 12 years is 1.12695e+16. By the histogram, we can see that most countries on earth popluation is not very large. I will find top 10 and bottom 10 population countries in 2007, then draw their population trend in 12-year period.  
+  
+```{r}
+summary(data1$pop)
+y2007<-seq(12,1704,by=12)
+top.pop<-data1$country[y2007][order(data1$pop[y2007])[142:133]]
+bottom.pop<-data1$country[y2007][order(data1$pop[y2007])[1:10]]
+top.index<-numeric(10*12)
+i<-1; j<-1
+while(i<=10) {
+  top.index[j:(j+11)]<-which(as.character(data1$country)==as.character(top.pop)[i])
+  i<-i+1
+  j<-j+12
+}
+
+bottom.index<-numeric(10*12)
+i<-1; j<-1
+while(i<=10) {
+  bottom.index[j:(j+11)]<-which(as.character(data1$country)==as.character(bottom.pop)[i])
+  i<-i+1
+  j<-j+12
+}
+
+xyplot(pop~year|country,data=data1[top.index,])
+xyplot(pop~year|country,data=data1[bottom.index,])
+```
+
+* The first plot is top 10 population countries. The second plot is bottom 10 population countries.  
 
 
